# cawoo

./: .gitignore  README.md  pyproject.toml
cawoo/: .env.example  __init__.py  requirements.txt  utils.py
cawoo/calculator/: __init__.py
cawoo/cli/: __init__.py  __main__.py  main.py
cawoo/config/: __init__.py
cawoo/entities/: __init__.py  selector.py
cawoo/parser/: __init__.py  interface.py
cawoo/parser/notion_csv/: __init__.py  notion_csv_parser.py
cawoo/parser/time_period/: __init__.py  time_period_parser.py
