[tool.poetry]
name = "cawoo"
version = "0.0.1"
description = ""
authors = ["Kuroi_Cc <ChenchengMiKuRo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
